[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/font/Heroes Legend.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://ContinueBtn.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 47
outline_size = 6
use_filter = true
extra_spacing_char = 9
extra_spacing_space = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -512.0
margin_top = 183.0
margin_right = 512.0
margin_bottom = 258.0
custom_colors/font_color = Color( 55.18, 7.75, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1
percent_visible = 0.0

[node name="ButtonsContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -161.0
margin_top = -20.0
margin_right = 161.0
margin_bottom = 20.0

[node name="Restart" type="Button" parent="ButtonsContainer"]
margin_right = 199.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Exit")
focus_neighbour_right = NodePath("../Exit")
focus_next = NodePath("../Exit")
focus_previous = NodePath("../Exit")
custom_colors/font_color = Color( 0.996078, 0.0156863, 0.0156863, 0.388235 )
custom_colors/font_color_hover = Color( 0.878431, 0.0156863, 0.0156863, 1 )
custom_fonts/font = SubResource( 2 )
text = "Restart"
flat = true
script = ExtResource( 3 )

[node name="Exit" type="Button" parent="ButtonsContainer"]
margin_left = 203.0
margin_right = 316.0
margin_bottom = 40.0
focus_neighbour_left = NodePath("../Restart")
focus_neighbour_right = NodePath("../Restart")
focus_next = NodePath("../Restart")
focus_previous = NodePath("../Restart")
custom_colors/font_color = Color( 0.94902, 0.0392157, 0.294118, 0.388235 )
custom_colors/font_color_hover = Color( 0.94902, 0.0392157, 0.294118, 1 )
custom_fonts/font = SubResource( 3 )
text = "exit"
flat = true

[node name="ShowCharTimer" type="Timer" parent="."]
wait_time = 0.15

[connection signal="pressed" from="ButtonsContainer/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="ButtonsContainer/Exit" to="." method="_on_Exit_pressed"]
[connection signal="timeout" from="ShowCharTimer" to="." method="_on_ShowCharTimer_timeout"]
